add make test to github actions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v1
       - name: build cpp
         working-directory: ./cpp
-        run: make
+        run: make test && make
